[gd_scene load_steps=31 format=3 uid="uid://dd7mpa5anwn06"]

[ext_resource type="Script" path="res://worm/worm_front.gd" id="1_7ixcj"]
[ext_resource type="PackedScene" uid="uid://c3celykknp05n" path="res://features/slime.tscn" id="2_4874p"]
[ext_resource type="PackedScene" uid="uid://qs6dhqvybwnq" path="res://features/crumb.tscn" id="3_6ydm7"]
[ext_resource type="Texture2D" uid="uid://xr53vj2ebvu" path="res://worm/front-outline.png" id="7_fc3qa"]
[ext_resource type="Texture2D" uid="uid://bl12tabuh2g" path="res://worm/front-body.png" id="8_gug04"]
[ext_resource type="Texture2D" uid="uid://crr3r5rv3umqa" path="res://worm/front-top.png" id="9_30gi8"]
[ext_resource type="Texture2D" uid="uid://cr0qwifpt6t1j" path="res://worm/front-belly.png" id="10_rocqg"]
[ext_resource type="Texture2D" uid="uid://6h1ew214snop" path="res://features/hit.png" id="10_v1jwa"]
[ext_resource type="AudioStream" uid="uid://4r8shsnsbali" path="res://audio/215162__otisjames__thud.wav" id="11_04yj1"]
[ext_resource type="Texture2D" uid="uid://dd0cj52iyque2" path="res://worm/front-walk1-a.png" id="11_dta1g"]
[ext_resource type="Texture2D" uid="uid://c535h1swtnata" path="res://worm/front-appendage-outline.png" id="11_huslo"]
[ext_resource type="Texture2D" uid="uid://x083pbqc5yr5" path="res://worm/front-eyes.png" id="11_kb3c4"]
[ext_resource type="Texture2D" uid="uid://d1larstpgrtq3" path="res://worm/front-walk1-b.png" id="12_2vsfe"]
[ext_resource type="Texture2D" uid="uid://dp0jxqtdjwr80" path="res://worm/front-mouth.png" id="12_j0ttl"]
[ext_resource type="AudioStream" uid="uid://bsyma0k5y5heh" path="res://audio/352402__noahpardo__npx-throat-gathering-spit-2.wav" id="12_wkfij"]
[ext_resource type="AudioStream" uid="uid://boua4s0jseys6" path="res://audio/20279__koops__apple_crunch_16.wav" id="13_hk801"]
[ext_resource type="Texture2D" uid="uid://0s3ot6t3tbi3" path="res://worm/front-walk1-outline.png" id="13_yx147"]
[ext_resource type="Texture2D" uid="uid://dh6ptannxwy1d" path="res://worm/front-walk2-a.png" id="14_1dnpk"]
[ext_resource type="Texture2D" uid="uid://42x5oon55mn6" path="res://worm/front-walk2-b.png" id="15_eac5t"]
[ext_resource type="Texture2D" uid="uid://ds0psoy5e0x6t" path="res://worm/front-walk2-outline.png" id="16_q2ijb"]
[ext_resource type="Texture2D" uid="uid://bn2y2ix652wss" path="res://worm/front-walk3-a.png" id="17_gfuqo"]
[ext_resource type="Texture2D" uid="uid://f68d36lu1gt6" path="res://worm/front-walk3-b.png" id="18_uqcba"]
[ext_resource type="Texture2D" uid="uid://dgkpe5oeqayv1" path="res://worm/front-walk3-outline.png" id="19_38db1"]

[sub_resource type="Animation" id="Animation_4q7xl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Animation/Frame1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Animation/Frame2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Animation/Frame3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_no1wo"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/Animation/Frame1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/Animation/Frame2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/Animation/Frame3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ourl6"]
_data = {
"RESET": SubResource("Animation_4q7xl"),
"walk": SubResource("Animation_no1wo")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_bkwjp"]
radius = 31.0161

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7sexe"]
radius = 26.0
height = 130.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wfloj"]
radius = 39.0128

[sub_resource type="CircleShape2D" id="CircleShape2D_1fyxy"]
radius = 38.0132

[node name="WormFront" type="RigidBody2D"]
position = Vector2(29, -52)
collision_layer = 0
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("1_7ixcj")
slime_scene = ExtResource("2_4874p")
crumb_scene = ExtResource("3_6ydm7")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ourl6")
}

[node name="Sprites" type="Node2D" parent="."]

[node name="HeadDamageArea2D" type="Area2D" parent="Sprites"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/HeadDamageArea2D"]
position = Vector2(32, -72)
shape = SubResource("CircleShape2D_bkwjp")

[node name="Outline" type="Sprite2D" parent="Sprites"]
z_index = -3
texture = ExtResource("7_fc3qa")
offset = Vector2(27, -50)

[node name="Body" type="Sprite2D" parent="Sprites"]
z_index = -1
texture = ExtResource("8_gug04")
offset = Vector2(27, -50)

[node name="Top" type="Sprite2D" parent="Sprites"]
z_index = -1
texture = ExtResource("9_30gi8")
offset = Vector2(27, -50)

[node name="Belly" type="Sprite2D" parent="Sprites"]
z_index = -1
texture = ExtResource("10_rocqg")
offset = Vector2(27, -50)

[node name="AppendageOutline" type="Sprite2D" parent="Sprites"]
texture = ExtResource("11_huslo")
offset = Vector2(27, -50)

[node name="Eyes" type="Sprite2D" parent="Sprites"]
z_index = -1
texture = ExtResource("11_kb3c4")
offset = Vector2(27, -50)

[node name="Mouth" type="Sprite2D" parent="Sprites"]
z_index = -1
texture = ExtResource("12_j0ttl")
offset = Vector2(27, -50)

[node name="SlimeSource" type="Marker2D" parent="Sprites"]
position = Vector2(38, -65)

[node name="Camera2D" type="Camera2D" parent="Sprites"]
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="EatingArea" type="Area2D" parent="Sprites"]
position = Vector2(1, -2)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprites/EatingArea"]
position = Vector2(25, -37)
shape = SubResource("CapsuleShape2D_7sexe")

[node name="Animation" type="Node2D" parent="Sprites"]
z_index = -1

[node name="Frame1" type="Node2D" parent="Sprites/Animation"]

[node name="Foreleg" type="Sprite2D" parent="Sprites/Animation/Frame1"]
texture = ExtResource("11_dta1g")
offset = Vector2(27, -50)

[node name="Backleg" type="Sprite2D" parent="Sprites/Animation/Frame1"]
texture = ExtResource("12_2vsfe")
offset = Vector2(27, -50)

[node name="Outlines" type="Sprite2D" parent="Sprites/Animation/Frame1"]
texture = ExtResource("13_yx147")
offset = Vector2(27, -50)

[node name="Frame2" type="Node2D" parent="Sprites/Animation"]

[node name="Foreleg" type="Sprite2D" parent="Sprites/Animation/Frame2"]
texture = ExtResource("14_1dnpk")
offset = Vector2(27, -50)

[node name="Backleg" type="Sprite2D" parent="Sprites/Animation/Frame2"]
texture = ExtResource("15_eac5t")
offset = Vector2(27, -50)

[node name="Outlines" type="Sprite2D" parent="Sprites/Animation/Frame2"]
texture = ExtResource("16_q2ijb")
offset = Vector2(27, -50)

[node name="Frame3" type="Node2D" parent="Sprites/Animation"]

[node name="Foreleg" type="Sprite2D" parent="Sprites/Animation/Frame3"]
texture = ExtResource("17_gfuqo")
offset = Vector2(27, -50)

[node name="Backleg" type="Sprite2D" parent="Sprites/Animation/Frame3"]
texture = ExtResource("18_uqcba")
offset = Vector2(27, -50)

[node name="Outlines" type="Sprite2D" parent="Sprites/Animation/Frame3"]
texture = ExtResource("19_38db1")
offset = Vector2(27, -50)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wfloj")

[node name="GravityPoint" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("10_v1jwa")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="GroundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_04yj1")

[node name="SpitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_wkfij")

[node name="EatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_hk801")

[node name="DamageArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea2D"]
shape = SubResource("CircleShape2D_1fyxy")

[connection signal="body_entered" from="Sprites/HeadDamageArea2D" to="." method="_on_damage_area_2d_body_entered"]
[connection signal="body_entered" from="Sprites/EatingArea" to="." method="_on_eating_area_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="body_entered" from="DamageArea2D" to="." method="_on_damage_area_2d_body_entered"]
