[gd_scene load_steps=19 format=3 uid="uid://dd7mpa5anwn06"]

[ext_resource type="Script" path="res://worm_front.gd" id="1_rw4nf"]
[ext_resource type="PackedScene" uid="uid://c3celykknp05n" path="res://slime.tscn" id="2_dv6bn"]
[ext_resource type="Texture2D" uid="uid://xmouf5q1t8ww" path="res://worm/front-walk1.png" id="2_m32wx"]
[ext_resource type="Texture2D" uid="uid://blojcrk05bmn0" path="res://worm/front-walk2.png" id="3_4unqo"]
[ext_resource type="PackedScene" uid="uid://qs6dhqvybwnq" path="res://crumb.tscn" id="3_5oyt6"]
[ext_resource type="Texture2D" uid="uid://cy8ey6er2jslo" path="res://worm/front-walk3.png" id="4_ye44h"]
[ext_resource type="Texture2D" uid="uid://xr53vj2ebvu" path="res://worm/front-outline.png" id="5_vclal"]
[ext_resource type="Texture2D" uid="uid://bl12tabuh2g" path="res://worm/front-body.png" id="6_xwa5c"]
[ext_resource type="Texture2D" uid="uid://6h1ew214snop" path="res://hit.png" id="7_0jjxr"]
[ext_resource type="Texture2D" uid="uid://crr3r5rv3umqa" path="res://worm/front-top.png" id="7_prwf5"]
[ext_resource type="AudioStream" uid="uid://bytvlsxnxc076" path="res://audio/349182__natty23__whoosh.wav" id="11_bkiy5"]
[ext_resource type="AudioStream" uid="uid://4r8shsnsbali" path="res://audio/215162__otisjames__thud.wav" id="12_eqvkb"]
[ext_resource type="AudioStream" uid="uid://bsyma0k5y5heh" path="res://audio/352402__noahpardo__npx-throat-gathering-spit-2.wav" id="13_8n3bq"]
[ext_resource type="AudioStream" uid="uid://boua4s0jseys6" path="res://audio/20279__koops__apple_crunch_16.wav" id="14_0o6yv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_di2j6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m32wx")
}, {
"duration": 1.0,
"texture": ExtResource("3_4unqo")
}, {
"duration": 1.0,
"texture": ExtResource("4_ye44h")
}, {
"duration": 1.0,
"texture": ExtResource("3_4unqo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7sexe"]
radius = 26.0
height = 130.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wfloj"]
radius = 39.0128

[sub_resource type="CircleShape2D" id="CircleShape2D_83qpy"]
radius = 509.007

[node name="WormFront" type="RigidBody2D"]
position = Vector2(29, -52)
collision_layer = 0
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("1_rw4nf")
slime_scene = ExtResource("2_dv6bn")
crumb_scene = ExtResource("3_5oyt6")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_di2j6")
offset = Vector2(27, -50)

[node name="Outline" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -3
texture = ExtResource("5_vclal")
offset = Vector2(27, -50)

[node name="Body" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -1
texture = ExtResource("6_xwa5c")
offset = Vector2(27, -50)

[node name="Top" type="Sprite2D" parent="AnimatedSprite2D"]
z_index = -1
texture = ExtResource("7_prwf5")
offset = Vector2(27, -50)

[node name="SlimeSource" type="Marker2D" parent="AnimatedSprite2D"]
position = Vector2(38, -65)

[node name="Camera2D" type="Camera2D" parent="AnimatedSprite2D"]
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="EatingArea" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(1, -2)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/EatingArea"]
position = Vector2(25, -37)
shape = SubResource("CapsuleShape2D_7sexe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wfloj")

[node name="GravityPoint" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
texture = ExtResource("7_0jjxr")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ShootingRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootingRange"]
shape = SubResource("CircleShape2D_83qpy")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_bkiy5")

[node name="GroundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_eqvkb")

[node name="SpitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_8n3bq")

[node name="EatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_0o6yv")

[connection signal="landed" from="." to="." method="_on_landed"]
[connection signal="body_entered" from="AnimatedSprite2D/EatingArea" to="." method="_on_eating_area_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="body_entered" from="ShootingRange" to="." method="_on_shooting_range_body_entered"]
[connection signal="body_exited" from="ShootingRange" to="." method="_on_shooting_range_body_exited"]
